2009-12-29  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el: load mule-ucs if needed (emacs21)
	(twittering-start-http-ssl-session): add 'Expect: ' header field
	for avoiding '417 Expectation Failed' HTTP response error. See
	http://d.hatena.ne.jp/imait/20091228/1262004813 and
	http://www.escafrace.co.jp/blog/09/10/16/1008

2009-12-28  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* twittering-mode.el (twittering-get-response-header)
	(twittering-get-response-body): inefficient code were
	replaced. thanks to Tadashi MATSUO

2009-12-27  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-show-minibuffer-length): keeps
	activated mark from being forcefully deactivated.

2009-12-27  Yuto Hayamizu  <y.hayamizu@gmail.com>

	* test/run-test.sh: add. invoke unit test for each emacsen

	* Makefile (check): add check rule.

	* test/el-test-runner.el (twittering-run-test): exit with
	appropriate status code.

	* test.el (test-transform-body): add. transforms the body of
	`defcase' recursively
	(defcase): use `test-transform-body'

	* test/run-test.el (twittering-run-test): colorize resulting
	outputs

2009-12-27  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-http-post-default-sentinel):
	Check if buffer live-p before killing it.
	(twittering-http-get-list-index-sentinel): Likewise.

	* twittering-mode.el (twittering-setup-minibuffer): Remove an
	unnecessary call.

	* twittering-mode.el (twittering-other-user-list-interactive): Fix
	condition to detect a cancel.

	* twittering-mode.el (twittering-http-get-list-index-sentinel):
	Use `search-forward-regexp' instead of `search-forward' to fix a
	meaningless search.

2009-12-26  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-string): reimplement
	without `block'.
	(twittering-format-string): invokes a function in replacement
	table with a context alist.
	(twittering-retweet): replacement table is adapted to the new