@@ -877,10 +877,9 @@ Available keywords:
       (debug-printf "get-default-sentinel: proc=%s stat=%s" proc stat)
       (let ((header (twittering-get-response-header temp-buffer))
 	    (body (twittering-get-response-body temp-buffer))
-	    (status nil)
-	    )
+	    (status nil))
 	(if (string-match "HTTP/1\.[01] \\([a-zA-Z0-9 ]+\\)\r?\n" header)
-	    (progn
+	    (when body
 	      (setq status (match-string-no-properties 1 header))
 	      (case-string
 	       status
@@ -908,8 +907,8 @@ Available keywords:
 		  (message (if suc-msg suc-msg "Success: Get."))))
 	       (t (message status))))
 	  (message "Failure: Bad http response.")))
-    (when (and (not twittering-debug-mode) (buffer-live-p temp-buffer))
-      (kill-buffer temp-buffer)))
+      (when (and (not twittering-debug-mode) (buffer-live-p temp-buffer))
+	(kill-buffer temp-buffer)))
   )
 
 (defun twittering-render-timeline ()
@@ -1089,25 +1088,23 @@ PARAMETERS is alist of URI parameters.
    host nil (concat "/" method ".xml") parameters noninteractive sentinel))
 
 (defun twittering-http-post-default-sentinel (temp-buffer noninteractive proc stat &optional suc-msg)
-
   (unwind-protect
-      (condition-case err-signal
-	  (let ((header (twittering-get-response-header temp-buffer))
-		;; (body (twittering-get-response-body)) not used now.
-		(status nil))
-	    (if (string-match "HTTP/1\.1 \\([a-z0-9 ]+\\)\r?\n" header)
-		(setq status (match-string-no-properties 1 header))
-	      (setq status
-		    (progn (string-match "^\\([^\r\n]+\\)\r?\n" header)
-			   (match-string-no-properties 1 header))))
-	    (case-string status
-			 (("200 OK")
-			  (message (if suc-msg suc-msg "Success: Post")))
-			 (t (message "Response status code: %s" status)))
-	    )
-	(error (message (prin1-to-string err-signal))))
-    (when (and (not twittering-debug-mode) (buffer-live-p temp-buffer))
-      (kill-buffer temp-buffer)))
+      (debug-printf "post-default-sentinel: proc=%s stat=%s" proc stat)
+      (let ((header (twittering-get-response-header temp-buffer))
+	    ;; (body (twittering-get-response-body temp-buffer)) not used now.
+	    (status nil))
+	(if (string-match "HTTP/1\.1 \\([a-z0-9 ]+\\)\r?\n" header)
+	    (setq status (match-string-no-properties 1 header))
+	  (setq status
+		(progn (string-match "^\\([^\r\n]+\\)\r?\n" header)
+		       (match-string-no-properties 1 header))))
+	(case-string status
+		     (("200 OK")
+		      (message (if suc-msg suc-msg "Success: Post")))
+		     (t (message "Response status code: %s" status)))
+	)
+      (when (and (not twittering-debug-mode) (buffer-live-p temp-buffer))
+	(kill-buffer temp-buffer)))
   )
 
 (defun twittering-get-response-header (buffer)
@@ -1131,15 +1128,19 @@ PARAMETERS is alist of URI parameters.
 
 (defun twittering-get-response-body (buffer)
   "Exract HTTP response body from HTTP response, parse it as XML, and return a
-XML tree as list. `buffer' may be a buffer or the name of an existing buffer. "
+XML tree as list. Return nil when parse failed.
+`buffer' may be a buffer or the name of an existing buffer. "
   (if (stringp buffer) (setq buffer (get-buffer buffer)))
   (save-excursion
     (set-buffer buffer)
     (let ((start (if (search-forward-regexp "\r?\n\r?\n" nil t)
 		     (match-end 0)
 		   (point))))
-      (xml-parse-region start (point-max)))
-      ))
+      (condition-case get-error ;; to guard when `xml-parse-region' failed.
+	  (xml-parse-region start (point-max))
+	(error (message "Failure: %s" get-error)
+	       nil)))
+    ))
 
 (defun twittering-cache-status-datum (status-datum &optional data-var)
   "Cache status datum into data-var(default twittering-timeline-data)
